envoy-gw/envoy-ing-ctl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg-ingress
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
